# model-identity-verifier

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  release.yml  security.yml
docs/: configuration.md  docker.md  limitations.md  manual-mode.md  providers.md  release-checklist.md  scoring.md  testing.md
examples/: quickstart.sh  verify_mock.sh
scripts/: create_release_bundle.sh  e2e_docker_live.sh  e2e_local.sh  post_smoke_tag_gate.sh  run_anthropic_smoke_interactive.sh  run_live_smoke_interactive.sh  run_local_smoke_runbook.sh  run_openai_prompt_smoke.sh  run_openai_smoke_interactive.sh  run_remaining_smoke_interactive.sh
src/model_identity_verifier/: __init__.py  __main__.py  cli.py  smoke_gate.py
src/model_identity_verifier/analysis/: __init__.py  detector.py  patterns.py
src/model_identity_verifier/baselines/: __init__.py  manager.py
src/model_identity_verifier/engine/: __init__.py  verifier.py
src/model_identity_verifier/models/: __init__.py  enums.py  schemas.py
src/model_identity_verifier/probes/: __init__.py  manual_integrity.py  registry.py
src/model_identity_verifier/prompts/: __init__.py  assessor.py  packs.py
src/model_identity_verifier/providers/: __init__.py  base.py
src/model_identity_verifier/reports/: __init__.py  json_report.py  markdown_report.py  sarif_report.py  terminal.py
src/model_identity_verifier/scoring/: __init__.py  engine.py
src/model_identity_verifier/utils/: __init__.py  helpers.py
tests/: test_baselines.py  test_cli.py  test_detector.py  test_manual_integrity.py  test_probes.py  test_prompt_mode.py  test_providers.py  test_reports.py  test_scoring.py  test_smoke_gate.py  test_utils.py
tests/fixtures/: report_downgrade.json  report_error.json  report_fail.json  report_hijack.json  report_inconclusive.json  report_pass.json  report_route_mismatch.json  report_warn.json
tests/fixtures/manual/: chatgpt_consistent.txt  chatgpt_pack_quick.txt  chatgpt_says_claude.txt  claude_denies_deepseek.txt  hijack_accepted.txt  quote_only.txt  translation_only.txt
