[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-identity-verifier"
version = "0.1.3"
description = "CLI tool to detect suspicious model self-identification behavior"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Model Identity Verifier Contributors" }]
keywords = ["llm", "security", "identity", "verification", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.7,<3",
    "python-dotenv>=1.0,<2",
    "rich>=13.7,<14",
]

[project.optional-dependencies]
openai = ["openai>=1.30,<3"]
anthropic = ["anthropic>=0.25,<1"]
google = ["google-generativeai>=0.5,<1"]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-cov>=5.0,<6",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
    "build>=1.2,<2",
    "pip-audit>=2.7,<3",
    "bandit>=1.7,<2",
]
all = [
    "model-identity-verifier[openai,anthropic,google,dev]",
]

[project.scripts]
miv = "model_identity_verifier.cli:main"

[project.urls]
Homepage = "https://github.com/codethor0/model-identity-verifier"
Documentation = "https://github.com/codethor0/model-identity-verifier#readme"
Repository = "https://github.com/codethor0/model-identity-verifier"
Issues = "https://github.com/codethor0/model-identity-verifier/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --import-mode=importlib"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PT", "PTH", "ARG", "T20", "RUF"]
ignore = ["T201"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG", "S101"]
"src/model_identity_verifier/cli.py" = ["T201"]
"src/model_identity_verifier/reports/terminal.py" = ["T201"]
"src/model_identity_verifier/probes/registry.py" = ["RUF001"]
"src/model_identity_verifier/providers/base.py" = ["ARG002"]
"src/model_identity_verifier/analysis/detector.py" = ["RUF001"]
"src/model_identity_verifier/analysis/patterns.py" = ["RUF001"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["model_identity_verifier"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B105"]
